--- a/app/globals.css
+++ b/app/globals.css
@@ -2,13 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   color: black; /* Set text color to black */
   background: white; /* Set background to white */
 }
-
+section {
+  scroll-margin-top: 75px; /* Adjust this value to match your navbar height */
+}
 @layer utilities {
   .text-gradient {
-    @apply bg-clip-text text-transparent bg-gradient-to-r from-yellow-400 to-gray-500;
+    @apply bg-clip-text text-transparent bg-gradient-to-r from-yellow-500 to-gray-400;
   }
 }
